# expflow-hpc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  EXPERIMENT_MANAGER_GUIDE.md  GITHUB_NAMES.md  INTERACTIVE_INIT_GUIDE.md  LAUNCH_CHECKLIST.md  LICENSE  MIGRATION_GUIDE.md  PARTITION_VALIDATOR_USAGE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TESTING.md  USER_GUIDE.md  analyze_evaluations.py  experiment_manager.py  hpc_config.py  hpcexp  hpcexp_core.py  navsim_manager.py  pyproject.toml  requirements.txt  resource_advisor.py  setup.py  test_manager.py  verify_fix.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: EXPERIMENT_AUTOMATION.md  GENERIC_HPC_FRAMEWORK.md  GPU_SWITCHING_REPRODUCIBILITY.md  README.md  api-reference.md  cli-reference.md  custom-managers.md  getting-started.md  migration-guide.md  partition-access-guide.md  quick-reference.md  user-guide.md
examples/: navsim_cache_builder.py  navsim_manager.py  navsim_results_harvester.py  partition_aware_manager.py  simple_image_classification.py
examples/templates/: ijepa_mlp_ablation.yaml  vit_mlp.yaml
experiment_templates/: ijepa_mlp.yaml  ijepa_mlp_v4.yaml
src/expflow/: __init__.py  analysis_pipeline.py  cache_builder.py  checkpoint_validator.py  cli.py  eval_advisor.py  eval_log_parser.py  execution.py  experiment_series.py  hpc_config.py  hpcexp_core.py  interactive_init.py  matrix_builder.py  partition_validator.py  pruner.py  resource_advisor.py  result_record.py  results_harvester.py  results_storage.py  run_history.py  scope_aggregator.py  script_utils.py
tests/: test_execution_backend.py  test_phase1_abstractions.py  test_phase3_security.py
